done deleting osd and fix bags

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,15 @@
     border-color: red;
 }
 
+.red {
+    color: red;
+}
+
 .invisible {
     display: none;
+}
+
+.form-control:focus {
+    box-shadow: none;
+    border-color: initial;
 }
